# nscp

./: CMakeLists.txt
debian/: README.Debian  README.source  TODO  bug-control.ex  bug-presubj.ex  bug-script.ex  changelog  clean  control  copyright  install  manpage.1.ex  not-installed  nsclient-doc.doc-base  nsclient.README.Debian  nsclient.install  nsclient.lintian-overrides  nsclient.postinst  nsclient.service  nscp.logrotate  nscp.postrm  nscp.sysusers  rules
debian/upstream/: metadata
files/: CMakeLists.txt
include/simpleini/: simpleini.h
installer_lib/: CMakeLists.txt
libs/minizip/: CMakeLists.txt
libs/settings_manager/: CMakeLists.txt
modules/WEBServer/: module.cmake
service/: CMakeLists.txt
service/plugins/: zip_plugin.cpp
tests/: CMakeLists.txt
